src/client/Chat.less
@import "./colors.less";

#chat {
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    bottom: 16px;
    top: 16px;
    left: 16px;
    right: 16px;
    z-index: 1;
    padding: 8px;
    background-color: @panelGrayTransparent;
    overflow-y: hidden;
    border: 2px solid @panelGray;
    
    li {
        text-align: left;
    }

    #chatInput {
        margin-top: 8px;
    }

    .chatGradient {
        position: fixed;
        width: 100%;
        height: 100%;
        bottom: 16px;
        top: 16px;
        left: 16px;
        right: 16px;
        pointer-events: none;
    }

    &.focused #chatVerticalGradient,
    &.focused #chatHorizontalGradient {
        background: none;
    }

    #chatVerticalGradient {
        background: linear-gradient(
            to bottom,
            @appBackground, 
            transparent
          );
    }

    #chatHorizontalGradient {
        background: linear-gradient(
            to left,
            @appBackground, 
            transparent
          );
    }
}

